--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "vue-axios": "^2.0.2",
     "vue-localstorage": "^0.3.0",
     "vue-resource": "^1.3.4",
-    "vue-resource2": "^0.1.0"
+    "vue-resource2": "^0.1.0",
+    "vuetify": "^0.14.7"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
